--- a/solr/cross-dc-manager/src/java/overview.html
+++ b/solr/cross-dc-manager/src/java/overview.html
@@ -19,7 +19,7 @@
 Apache Solr: Cross DC Manager
 
 <p>
-This package provides a tool for managing Cross Datacenter Replication in Solr. It runs separately from the Solr process(es), and can be used in conjunction with the Solr Cross-DC module.
+This package provides a tool for managing Cross Data Center Replication in Solr. It runs separately from the Solr process(es), and can be used in conjunction with the Solr Cross-DC module.
 </p>
 
 </body>
